Version 6.9 (?? March 2001)
- Added constructor Vector(Point, Point).

Version 6.8 (21 February 2001)
- Use CGAL_TYPENAME_MSVC_NULL in Cartesian_converter<>.
- Added converters for Aff_transformation_[23] in Cartesian_converter<>.
- Move NT_converter<> in the Number_types package.

Version 6.7 (19 February 2001)
- Use the function object Less_xyz_3 instead of Less_xyzC3<>.

Version 6.6 (14 February 2001)
- moved Kernel_traits_common.h file to Kernel_basic package
- added .min_coord(), .max_coord() in Iso_cuboid and Iso_rectangle and
  new constructor in both classes

Version 6.5 (13 February 2001)
- Kernel_traits_common.h shorted with the use of a macro
- Several missing function object classes added
- New class Cartesian_converter.
- .area() .squared_area() and .volume().
- Remove old style casts.

Version 6.4 (25 January 2001)
- Use the new file iterator_traits_pointer_specs_for_simple_cartesian_kernel.h

Version 6.3 (22 January 2001)
- Stefan's original Simple_cartesian replaced by this one.

Version 6.2 (18 January 2001)
- Borland fix for SegmentC2.
- Removed #include<CGAL/predicate_classes_3.h> in Tetrahedron_3.h that broke
  the inclusion order rules...

Version 6.1 (16 January 2001)
- Borland fixes.
- MipsPro fixes : forward the handle typedefs in derived class *Cartesian<>.
- VC++ fixes : rename the handle types inside object classes. [dima]

Version 6.0 (12 January 2001)
- Merged C2, C3 and Cartesian_basic in Cartesian_kernel.
- Merged all .C files into their corresponding .h.
- Changed constructions_on_*.h to *_constructions_[23].h, gathering
  constructions which _return_ type is the same.
- Moved distance_computations_[23].h to the more general
  ft_constructions_[23].h.
- Replaced `x == FT(0)' by `CGAL_NTS is_zero(x)'.
- Use identical() instead of comparing "ptr".
- Call identical() in all operator==() in order to be consistent.
- Sphere_3 is back to life.
- Ctors don't use "new (static_cast<void *> (ptr)) ...", but proper